Add photo component

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source= f4632l2384u2475\\sqlexpress;Initial Catalog=datingapp;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dbvkqt8zf",
+    "ApiKey": "645119167715271",
+    "ApiSecret": "tlbWGJ8bm4813Oshy9nrCK5WdkI"
   }
 }
